<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_FS_Devices" Id="{d4db42a1-6646-451c-9e07-c80bb4e9d558}">
    <Declaration><![CDATA[VAR_GLOBAL

    {attribute 'pytmc' := '
		pv: TV1K4:VFS:01
	'}

	{attribute 'TcLinkTo' := 	'.q_xPress_OK		:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.TV1K4_VFS_1.i_xPress_OK;
								 .q_xOPN_SW			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.TV1K4_VFS_1.i_xOPN_SW;
								 .q_xCLS_SW			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.TV1K4_VFS_1.i_xCLS_SW;
								 .q_xVAC_FAULT_Reset:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.TV1K4_VFS_1.i_xVAC_FAULT_Reset;
								 .q_xOverrideMode	:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.TV1K4_VFS_1.i_xOverrideMode;
								 .q_xOverrideOpen	:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.TV1K4_VFS_1.i_xOverrideOpen;
								 .i_xTrigger		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_xTrigger;
								 .i_xVFS_Open		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_xVFS_Open;
								 .i_xVFS_Closed		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_xVFS_Closed;
								 .i_xVAC_FAULT_OK	:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_xVAC_FAULT_OK;
								 .i_xMPS_OK			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_xMPS_OK;
								 .i_eVFS_State		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_eVFS_State
	'}
	
	TV1K4_VFS_Interface : FB_VFS_Interface;


	{attribute 'TcLinkTo' := 	'
		.q_xClose_A	:=	TIIB[B940_K4S20_EK0  (EK1100)]^K4S20-E2-FSV (EL2202)^Channel 1^Output;
		.q_xClose_B	:=	TIIB[B940_K4S20_EK0  (EK1100)]^K4S20-E2-FSV (EL2202)^Channel 2^Output;
		.q_xClose_C	:=	TIIB[B940_K4S20_EK0  (EK1100)]^K4S20-E3-FSV (EL2202)^Channel 1^Output;
		.q_xOPN_DO	:=	TIIB[B940_K4S20_EK0  (EK1100)]^K4S20-E3-FSV (EL2202)^Channel 2^Output;
		.i_xClsLS	:=	TIIB[B940_K4S20_EK0  (EK1100)]^K4S20-E1-FSV (EL1004)^Channel 1^Input;
		.i_xOpnLS	:=	TIIB[B940_K4S20_EK0  (EK1100)]^K4S20-E1-FSV (EL1004)^Channel 2^Input;
		.i_xTrigger := 	TIIB[B940_R20_EK0 (EK1100)]^R20_EK0_E5_MKS937B (EL1124)^Channel 1^Input '}
	TV1K4_VFS_1 : FB_VFS;	
	
//	{attribute 'TcLinkTo' := 	'TV1K4_VFS_1_VAC_FAULT_OK	 := 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.TV1K4_VFS_1.q_xVAC_FAULT_OK; '}
//	TV1K4_VFS_1_VAC_FAULT_OK  AT %I* : BOOL;
	
    {attribute 'pytmc' := '
		pv: MR3K4:KBO:VFS:01
	'}
	
	{attribute 'TcLinkTo' := 	'.q_xPress_OK		:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.i_xPress_OK;
								 .q_xOPN_SW			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.i_xOPN_SW;
								 .q_xCLS_SW			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.i_xCLS_SW;
								 .q_xVAC_FAULT_Reset:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.i_xVAC_FAULT_Reset;
								 .q_xOverrideMode	:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.i_xOverrideMode;
								 .q_xOverrideOpen	:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.i_xOverrideOpen;
								 .i_xTrigger		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_xTrigger;
								 .i_xVFS_Open		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_xVFS_Open;
								 .i_xVFS_Closed		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_xVFS_Closed;
								 .i_xVAC_FAULT_OK	:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_xVAC_FAULT_OK;
								 .i_xMPS_OK			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_xMPS_OK;
								 .i_eVFS_State		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_eVFS_State
	'}
	
	MR3K4_KBO_VFS_Interface : FB_VFS_Interface;	
	
	{attribute 'TcLinkTo' := 	'
		.q_xClose_A	:=	TIIB[K4S2_01_E3_VFS (EL2202)]^Channel 1^Output;
		.q_xClose_B	:=	TIIB[K4S2_01_E3_VFS (EL2202)]^Channel 2^Output;
		.q_xClose_C	:=	TIIB[K4S2_01_E4_VFS (EL2202)]^Channel 1^Output;
		.q_xOPN_DO	:=	TIIB[K4S2_01_E4_VFS (EL2202)]^Channel 2^Output;
		.i_xClsLS	:=	TIIB[K4S2_01_E1_VFS (EL1004)]^Channel 1^Input;
		.i_xOpnLS	:=	TIIB[K4S2_01_E1_VFS (EL1004)]^Channel 2^Input;
		.i_xTrigger :=  TIIB[B940_R20_EK0 (EK1100)]^R20_EK0_E5_MKS937B (EL1124)^Channel 1^Input'}
	MR3K4_KBO_VFS_1 : FB_VFS;
	
//	{attribute 'TcLinkTo' := 	'TV1K4_VFS_1_VAC_FAULT_OK	 := 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR3K4_KBO_VFS_1.q_xVAC_FAULT_OK; '}
//	MR3K4_KBO_VFS_1_VAC_FAULT_OK  AT %I* : BOOL;
	
	{attribute 'pytmc' := '
		pv: MR3K4:KBO:VFS_1
	'}
	
	{attribute 'TcLinkTo' := 	'.q_xPress_OK		:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.i_xPress_OK;
								 .q_xOPN_SW			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.i_xOPN_SW;
								 .q_xCLS_SW			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.i_xCLS_SW;
								 .q_xVAC_FAULT_Reset:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.i_xVAC_FAULT_Reset;
								 .q_xOverrideMode	:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.i_xOverrideMode;
								 .q_xOverrideOpen	:= 	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Inputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.i_xOverrideOpen;
								 .i_xTrigger		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.q_xTrigger;
								 .i_xVFS_Open		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.q_xVFS_Open;
								 .i_xVFS_Closed		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.q_xVFS_Closed;
								 .i_xVAC_FAULT_OK	:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.q_xVAC_FAULT_OK;
								 .i_xMPS_OK			:=  TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.q_xMPS_OK;
								 .i_eVFS_State		:=	TIPC^PLC_TMO_VAC^PLC_TMO_VAC Instance^FSVTask Outputs^GVL_FS_Devices.MR4K4_KBO_VFS_1.q_eVFS_State
	'}
	
	MR4K4_KBO_VFS_Interface : FB_VFS_Interface;	
	
	{attribute 'TcLinkTo' := 	'
		.q_xClose_A	:=	TIIB[K4S8_01_E3 (EL2202)]^Channel 1^Output;
		.q_xClose_B	:=	TIIB[K4S8_01_E3 (EL2202)]^Channel 2^Output;
		.q_xClose_C	:=	TIIB[K4S8_01_E4 (EL2202)]^Channel 1^Output;
		.q_xOPN_DO	:=	TIIB[K4S8_01_E4 (EL2202)]^Channel 2^Output;
		.i_xClsLS	:=	TIIB[K4S8_01_E1 (EL1004)]^Channel 1^Input;
		.i_xOpnLS	:=	TIIB[K4S8_01_E1 (EL1004)]^Channel 2^Input;
		.i_xTrigger := 	TIIB[B940_R20_EK0 (EK1100)]^R20_EK0_E5_MKS937B (EL1124)^Channel 1^Input '}
	MR4K4_KBO_VFS_1 : FB_VFS;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>